# Sims4TikTokMod

./: .cursorignore  .gitignore  README.md  REQUIREMENTS.md  SIM_CHARACTER_CREATION_README.md  TIKTOK_INTEGRATION_GUIDE.md  animations_list.txt  compile.py  decompile_scripts.py  pyproject.toml  pyrightconfig.json  settings.py  vfx_list.txt
EA/base/lib/: __future__.py  _bootlocale.py  _collections_abc.py  _compat_pickle.py  _compression.py  _dummy_thread.py  _markupbase.py  _osx_support.py  _py_abc.py  _pyio.py  (+158 more)
EA/core/: accumulator.py  algos.py  api_config.py  assertions.py  caches.py  contour.py  debug_breakpoint.py  default_property_stream_reader.py  enum.py  framewrapper.py  graph_algos.py  intern_service.py  macros.py  paths.py  pythonutils.py  singletons.py  sizeof.py  uid.py
EA/simulation/: TimelineHandleArchiver.py  __app_paths__.py  __hooks__.py  adaptive_clock_speed.py  alarms.py  areaops.py  areaserver.py  build_buy.py  camera.py  clock.py  clock_telemetry_helper.py  cython.py  cython_utils.py  date_and_time.py  debugvis.py  display_snippet_tuning.py  element_utils.py  elements.py  game_services.py  id_generator.py  indexed_manager.py  memories.py  mtx.py  mutex.py  omega.py  persistence_error_types.py  persistence_module.py  placement.py  profanity.py  profile_utils.py  reset.py  scheduler.py  scheduler_utils.py  scheduling.py  scheduling_debugger.py  simulate_to_time.py  snippets.py  tag.py  telemetry_helper.py  terrain.py  (+10 more)
Scripts/: install_dependencies.py  requirements.txt
Scripts/sims_tik_tok_mod/: modinfo.py  sim_character_creator.py  tiktok_bridge_client.py  tiktok_cheat_commands.py  tiktok_effect_mappings.py
Utilities/: unpyc3_compiler.py
bridge_service/: PACKAGE_PARSER_README.md  README-ELECTRON.md  README.md  bridge-service.js  bridge.js  check-live.js  config.json  config.py  dbpf-parser.js  electron-main.js  gift-mappings-service.js  gift-mappings.js  install.sh  package-lock.json  package.json  preload.js  renderer.css  renderer.html  renderer.js  requirements.txt  start.js  start_bridge.py  test-client.js  test-custom-parser.js  test-manual-commands.js  test-sim-creation.js  test_client.py  tiktok_bridge.py  ts4-package-parser-custom.js  user-settings.js  webpack.config.js
bridge_service/src/: App.css  App.jsx  index.html
(+2689 files in other folders)
